fix: Check style failures
Signed-off-by: Piotr P. Karwasz <piotr@github.copernik.eu>